Updated MINECRAFT_OPTS to better suite Java 16